<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    android:paddingHorizontal="15dp">

        <TextView
            android:id="@+id/list_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_title"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginBottom="5sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_item_duedate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duedate"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/list_item_duetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_time"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/list_item_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_notes"
            android:textSize="15sp"/>

</LinearLayout>