<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTodo"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimaryDark"
        />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_title"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/duedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duedate"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_notes"
            android:textSize="15sp"
            android:textStyle="bold"/>

</LinearLayout>
